# MCP_Function_Writer_Server

./: .gitignore  MCP_client.py  README.md  pyproject.toml  setup.bat  setup.sh
mcp_function_generator/: __main__.py  ai_program_writer.py  server.py
